k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order-microservice
  labels:
    app: order-microservice
spec:
  to:
    kind: Service
    name: order-microservice
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
